# Market-Busket-Analysis

./: README.md  pyproject.toml
data/rfm/: rfm_table.csv
notebooks/: association_mining.ipynb  customer_segmentation.ipynb  data_preprocess.ipynb
